--- a/src/main/resources/assets/adminlte/starter.html
+++ b/src/main/resources/assets/adminlte/starter.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
-<html lang="RO">
+<!--
+This is a starter template page. Use this page to start your new project from
+scratch. This page gets rid of all links and provides the needed markup only.
+-->
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
 
-    {% if title is empty %}
-        {% set title = "Another HR Portal" %}
-    {% endif %}
+    <title>AdminLTE 3 | Starter</title>
 
-    <title>{{ title }}</title>
-
-    <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="/webjars/AdminLTE/3.0.5/dist/css/adminlte.min.css">
+    <!-- Font Awesome Icons -->
+    <link href="plugins/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Theme style -->
+    <link href="dist/css/adminlte.min.css" rel="stylesheet">
+    <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-    {# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" #}
-    {# integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous"> #}
-
-    {% block stylesheets %}
-    {% endblock %}
-
-    {% block head %}
-    {% endblock %}
 </head>
-
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
+
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <!-- Left navbar links -->
@@ -35,17 +29,17 @@
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">Home</a>
+                <a class="nav-link" href="index3.html">Home</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">Contact</a>
+                <a class="nav-link" href="#">Contact</a>
             </li>
         </ul>
 
         <!-- SEARCH FORM -->
         <form class="form-inline ml-3">
             <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <input aria-label="Search" class="form-control form-control-navbar" placeholder="Search" type="search">
                 <div class="input-group-append">
                     <button class="btn btn-navbar" type="submit">
                         <i class="fas fa-search"></i>
@@ -63,11 +57,10 @@
                     <span class="badge badge-danger navbar-badge">3</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <a href="#" class="dropdown-item">
+                    <a class="dropdown-item" href="#">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="webjars/AdminLTE/3.0.5/dist/img/user1-128x128.jpg" alt="User Avatar"
-                                 class="img-size-50 mr-3 img-circle">
+                            <img alt="User Avatar" class="img-size-50 mr-3 img-circle" src="dist/img/user1-128x128.jpg">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     Brad Diesel
@@ -80,11 +73,10 @@
                         <!-- Message End -->
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a class="dropdown-item" href="#">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="webjars/AdminLTE/3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar"
-                                 class="img-size-50 img-circle mr-3">
+                            <img alt="User Avatar" class="img-size-50 img-circle mr-3" src="dist/img/user8-128x128.jpg">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     John Pierce
@@ -97,11 +89,10 @@
                         <!-- Message End -->
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a class="dropdown-item" href="#">
                         <!-- Message Start -->
                         <div class="media">
-                            <img src="webjars/AdminLTE/3.0.5/dist/img/user8-128x128.jpg" alt="User Avatar"
-                                 class="img-size-50 img-circle mr-3">
+                            <img alt="User Avatar" class="img-size-50 img-circle mr-3" src="dist/img/user3-128x128.jpg">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
                                     Nora Silvester
@@ -114,7 +105,7 @@
                         <!-- Message End -->
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
+                    <a class="dropdown-item dropdown-footer" href="#">See All Messages</a>
                 </div>
             </li>
             <!-- Notifications Dropdown Menu -->
@@ -126,27 +117,27 @@
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                     <span class="dropdown-header">15 Notifications</span>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a class="dropdown-item" href="#">
                         <i class="fas fa-envelope mr-2"></i> 4 new messages
                         <span class="float-right text-muted text-sm">3 mins</span>
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a class="dropdown-item" href="#">
                         <i class="fas fa-users mr-2"></i> 8 friend requests
                         <span class="float-right text-muted text-sm">12 hours</span>
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a class="dropdown-item" href="#">
                         <i class="fas fa-file mr-2"></i> 3 new reports
                         <span class="float-right text-muted text-sm">2 days</span>
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+                    <a class="dropdown-item dropdown-footer" href="#">See All Notifications</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button"><i
-                            class="fas fa-th-large"></i></a>
+                <a class="nav-link" data-slide="true" data-widget="control-sidebar" href="#" role="button"><i
+                        class="fas fa-th-large"></i></a>
             </li>
         </ul>
     </nav>
@@ -155,9 +146,8 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a href="#" class="brand-link">
-            <img src="webjars/AdminLTE/3.0.5/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
-                 class="brand-image img-circle elevation-3"
+        <a class="brand-link" href="index3.html">
+            <img alt="AdminLTE Logo" class="brand-image img-circle elevation-3" src="dist/img/AdminLTELogo.png"
                  style="opacity: .8">
             <span class="brand-text font-weight-light">AdminLTE 3</span>
         </a>
@@ -167,22 +157,21 @@
             <!-- Sidebar user panel (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 <div class="image">
-                    <img src="webjars/AdminLTE/3.0.5/dist/img/user1-128x128.jpg" class="img-circle elevation-2"
-                         alt="User Image">
+                    <img alt="User Image" class="img-circle elevation-2" src="dist/img/user2-160x160.jpg">
                 </div>
                 <div class="info">
-                    <a href="#" class="d-block">Alexandru Mihai></a>
+                    <a class="d-block" href="#">Alexander Pierce</a>
                 </div>
             </div>
 
             <!-- Sidebar Menu -->
             <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                    data-accordion="false">
+                <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview"
+                    role="menu">
                     <!-- Add icons to the links using the .nav-icon class
                          with font-awesome or any other icon font library -->
                     <li class="nav-item has-treeview menu-open">
-                        <a href="#" class="nav-link active">
+                        <a class="nav-link active" href="#">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 Starter Pages
@@ -191,13 +180,13 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">
+                                <a class="nav-link active" href="#">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Active Page</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a class="nav-link" href="#">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Inactive Page</p>
                                 </a>
@@ -205,7 +194,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a class="nav-link" href="#">
                             <i class="nav-icon fas fa-th"></i>
                             <p>
                                 Simple Link
@@ -227,7 +216,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="m-0 text-dark">{{ title }}</h1>
+                        <h1 class="m-0 text-dark">Starter Page</h1>
                     </div><!-- /.col -->
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
@@ -240,11 +229,72 @@
         </div>
         <!-- /.content-header -->
 
-
         <!-- Main content -->
         <div class="content">
-            {% block body %}
-            {% endblock %}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the bulk of the
+                                    card's
+                                    content.
+                                </p>
+
+                                <a class="card-link" href="#">Card link</a>
+                                <a class="card-link" href="#">Another link</a>
+                            </div>
+                        </div>
+
+                        <div class="card card-primary card-outline">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the bulk of the
+                                    card's
+                                    content.
+                                </p>
+                                <a class="card-link" href="#">Card link</a>
+                                <a class="card-link" href="#">Another link</a>
+                            </div>
+                        </div><!-- /.card -->
+                    </div>
+                    <!-- /.col-md-6 -->
+                    <div class="col-lg-6">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="m-0">Featured</h5>
+                            </div>
+                            <div class="card-body">
+                                <h6 class="card-title">Special title treatment</h6>
+
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
+                                <a class="btn btn-primary" href="#">Go somewhere</a>
+                            </div>
+                        </div>
+
+                        <div class="card card-primary card-outline">
+                            <div class="card-header">
+                                <h5 class="m-0">Featured</h5>
+                            </div>
+                            <div class="card-body">
+                                <h6 class="card-title">Special title treatment</h6>
+
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
+                                <a class="btn btn-primary" href="#">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.col-md-6 -->
+                </div>
+                <!-- /.row -->
+            </div><!-- /.container-fluid -->
         </div>
         <!-- /.content -->
     </div>
@@ -270,15 +320,15 @@
         <strong>Copyright &copy; 2014-2019 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
     </footer>
 </div>
+<!-- ./wrapper -->
 
-{% csrf %}
+<!-- REQUIRED SCRIPTS -->
 
-<script src="webjars/AdminLTE/3.0.5/plugins/jquery/jquery.min.js"></script>
-<script src="webjars/AdminLTE/3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="webjars/AdminLTE/3.0.5/dist/js/adminlte.min.js"></script>
-
-{% block javascripts %}
-{% endblock %}
-
+<!-- jQuery -->
+<script src="plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- AdminLTE App -->
+<script src="dist/js/adminlte.min.js"></script>
 </body>
 </html>
